# Esercizi_Esempi_CUDA

./: .gitignore  README.md
00_helloWorld/: Makefile  hello  hello.cu  ref.txt
01_cmake_example/: CMakeLists.txt  README.md  particle_test  run.sh
02_juliaset/: Color.h  Image.h  Makefile  README.md  main.cu  run.sh
02_juliaset/without_classes/: main.cu
03_ripple/: Makefile  README.md  main.cu  run.sh
04_raytracer/: compare.sh
04_raytracer/v1/: Makefile  README.md  main.cu
04_raytracer/v2/: Makefile  main.cu
05_graphics_interoperation/: Makefile  README.md
05_graphics_interoperation/glfw_example/: Makefile  main.cu  run.sh
05_graphics_interoperation/glut_example/: main.cu
05_graphics_interoperation/ref_examples/Mandelbrot/: Makefile  findgllib.mk
06_rt_graphics_interop/: CMakeLists.txt  README.md  run.sh
06_rt_graphics_interop/include/: Camera.h  Light.h  Ray.h  Scene.h  Sphere.h  Tracer.h  common.h
06_rt_graphics_interop/src/: Camera.cu  Scene.cu  Tracer.cu  main.cu
06_rt_graphics_interop_WIP/glfw_example/: Makefile
06_rt_graphics_interop_WIP/ref_examples/kamino410/: Makefile  main.cu
06_rt_graphics_interop_WIP/ref_examples/simpleGL/: Makefile  My_Makefile
07_polymorphism/: README.md
07_polymorphism/00_wrong_virtual/: compile.sh  run.sh
07_polymorphism/01_gpu_vtable/: .ycm_extra_conf.py
07_polymorphism/01_gpu_vtable/src/: main.cu
07_polymorphism/02_passing_arguments/: CMakeLists.txt
07_polymorphism/02_passing_arguments/src/: main.cu
07_polymorphism/esempio_virtual/src/: main.cu
l04_s14_tantiprint/: Makefile  README.md  main.cu
l04_s16_sommavettori/: Makefile  main.cu
l04_s18_somvethanderror/: Makefile  README.md  main.cu  run.sh
l04_s19_querydevice/: Makefile  main.cu  my_info.txt
l05_general/: main.cu
l05_s09_dynamicalloc/: README.md  main.cu
l05_s17_sommavetpinned_my/: main.cu
l05_s17_sommavetpinnedmapped_my/: main.cu
l07_s18_atomic_my/: README.md  main.cu
l07_s19_atomic2D_my/: CMakeLists.txt  main.cu
l08_s12_reducesum_my/: README.md  main.cu
l08_s31_warplvlreduction_my/: CMakeLists.txt  README.md  main.cu  run.sh
l12_s8_naivepthread/: CMakeLists.txt  README.md  main.c
l13_s08_openmpexample/: CMakeLists.txt  README.md  main.c  run.sh
l13_s17_openmppi/: CMakeLists.txt  main.c
